--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "talonui",
   "version": "0.0.1",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.es.js",
+  "type": "module",
   "scripts": {
     "build": "rollup -c",
     "dev": "tsc --watch",
@@ -30,11 +32,14 @@
     "typescript-eslint": "^8.11.0"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "clsx": "^2.1.1",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "tailwind-merge": "^2.5.4",
+    "tslib": "^2.8.0"
   },
   "peerDependencies": {
-  "react": "^17.0.0",
-  "react-dom": "^17.0.0"
-}
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
+  }
 }
