--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,11 +7,12 @@
     "declarationMap": true,
     "sourceMap": true,
     "moduleResolution": "node",
+    "importHelpers": true,
     "esModuleInterop": true,
     "strict": true,
     "jsx": "react",
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "src/index.tsx"],
   "exclude": ["node_modules"]
 }
